sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value save
     save = getValeur(i)
     ^AlgInsertionSort:10: error: not found: value save
     while(cpt<0 && getValeur(cpt)>save)
                                   ^